<resources>
    <string name="app_name">Baby Educator</string>
    <string name="touch_to_make_sound">Touch To Make Sound</string>
    <string name="letters">LETTERS</string>
    <string name="shapes">SHAPES</string>
    <string name="colors">COLORS</string>
    <string name="numbers">NUMBERS</string>
    <string name="fruits">FRUITS</string>
    <string name="domestic_animals">ANIMAL SOUNDS</string>
    <string name="letter_description">image for letter representation</string>
    <string name="shapes_image_description">image for shape representation</string>
    <string name="color_image_description">image for color representation</string>
    <string name="number_image_description">image for number representation</string>
    <string name="fruits_image_description">image for fruits representation</string>
    <string name="animal_sounds_image_description">image for animal sounds representation</string>
    <string name="touch_numbers_to_make_sound">Touch on Screen To Count and Make Sound</string>
    <string name="touch_shapes_to_make_sound">Touch Shapes To Make Sound</string>
    <string name="touch_letters_to_make_sound">Touch Letters To Make Sound</string>
    <string name="touch_fruits_to_make_sound">Touch Fruits To Make Sound</string>
    <string name="touch_colors_to_make_sound">Touch Colors To Make Sound</string>
    <string name="baboon_image">babon image</string>
    <string name="baboon">BABOON</string>
    <string name="bear_image">Bear Image</string>
    <string name="bear">BEAR</string>
    <string name="cat_image">cat image</string>
    <string name="cat">CAT</string>
    <string name="chimpanzee_image">Chimpanzee image</string>
    <string name="chimpanzee">CHIMPANZEE</string>
    <string name="crocodile_image">Crocodile image</string>
    <string name="crocodile">CROCODILE</string>
    <string name="dog_image">Dog image</string>
    <string name="dog">DOG</string>
    <string name="elephant_image">elephant image</string>
    <string name="elephant">ELEPHANT</string>
    <string name="gorilla_image">Gorilla image</string>
    <string name="gorilla">GORILLA</string>
    <string name="monkey_image">Monkey image</string>
    <string name="monkey">MONKEY</string>
    <string name="lion_image">Liona image</string>
    <string name="Lion">LION</string>
    <string name="snake_image">Snake image</string>
    <string name="snake">SNAKE</string>
    <string name="tiger_image">Tiger image</string>
    <string name="tiger">TIGER</string>
    <string name="orange_image">Orange image</string>
    <string name="Orange">ORANGE</string>
    <string name="apple_image">Apple image</string>
    <string name="apple">APPLE</string>
    <string name="banana_image">Banana image</string>
    <string name="Banana">BANANA</string>
    <string name="blueberry_image">Blueberry_image</string>
    <string name="Blueberries">BLUEBERRIES</string>
    <string name="grapes_image">Grapes image</string>
    <string name="grapes">GRAPES</string>
    <string name="calyxes_image">Calyxes image</string>
    <string name="calyxes">CALYXES</string>
    <string name="jackfruit_image">Jackfruit image</string>
    <string name="jackfruit">JACKFRUIT</string>
    <string name="lemon_image">Lemon image</string>
    <string name="lemon">LEMON</string>
    <string name="mango_image">Mango_image</string>
    <string name="mango">MANGO</string>
    <string name="strawberry_image">Strawberry image</string>
    <string name="strawberry">STRAWBERRY</string>
    <string name="sweetcherries_image">Sweetcherries image</string>
    <string name="sweetcherries">SWEET  CHERRIES</string>
    <string name="pomegranate_image">Pomegranate image</string>
    <string name="Pomegranate">POMEGRANATE</string>
    <string name="circle_image">Circle image</string>
    <string name="circle">CIRCLE</string>
    <string name="cone_image">Cone image</string>
    <string name="cone">CONE</string>
    <string name="cylinder_image">Cylinder image</string>
    <string name="cylinder">CYLINDER</string>
    <string name="heart_image">Heart image</string>
    <string name="heart">HEART</string>
    <string name="oval_image">Oval image</string>
    <string name="oval">OVAL</string>
    <string name="moon_image">Moon image</string>
    <string name="moon">MOON</string>
    <string name="polygon_image">Polygon image</string>
    <string name="polygon">POLYGON</string>
    <string name="rectangle_image">Rectangle image</string>
    <string name="rectangle">RECTANGLE</string>
    <string name="square_image">Square image</string>
    <string name="square">SQUARE</string>
    <string name="pyramid_image">Pyramid image</string>
    <string name="pyramid">PYRAMID</string>
    <string name="star_image">Star image</string>
    <string name="star">STAR</string>
    <string name="triangle_image">Triangle image</string>
    <string name="triangle">TRIANGLE</string>
</resources>