<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity"
android:background="@drawable/backgroung">

<TextView
    android:id="@+id/text_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:text="@string/touch_shapes_to_make_sound"
    android:layout_margin="8dp"
    android:textColor="#fff"
    android:textSize="28sp"
    android:textStyle="bold" />

<GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/text_view"
    android:rowCount="4"
    android:columnCount="3"
    android:layout_margin="8dp"
    >
    //******************************************************  first column
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="6dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/circle_image"
                android:src="@drawable/circle"
                app:srcCompat="@drawable/circle" />

            <TextView
                android:id="@+id/tvCircle"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/circle"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewHeart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="6dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/heart_image"
                android:src="@drawable/heart"
                tools:srcCompat="@drawable/heart" />

            <TextView
                android:id="@+id/tvHeart"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/heart"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPolygon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="6dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/polygon_image"
                android:src="@drawable/polygon"
                tools:srcCompat="@drawable/polygon" />

            <TextView
                android:id="@+id/tvPolygon"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/polygon"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPyramind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="6dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/pyramid_image"
                android:src="@drawable/pyramid"
                tools:srcCompat="@drawable/pyramid" />

            <TextView
                android:id="@+id/tvPyramid"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/pyramid"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    //********************************************************* end of first column

    //********************************************************* second column
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewCone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="6dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/cone_image"
                android:src="@drawable/cone"
                app:srcCompat="@drawable/cone" />

            <TextView
                android:id="@+id/tvCone"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/cone"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewOval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="6dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/oval_image"
                android:src="@drawable/oval"
                tools:srcCompat="@drawable/oval" />

            <TextView
                android:id="@+id/tvOval"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/oval"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewRectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="6dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/rectangle_image"
                android:src="@drawable/rectangle"
                tools:srcCompat="@drawable/rectangle" />

            <TextView
                android:id="@+id/tvRectangle"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/rectangle"
                android:textAlignment="center"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="6dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/star_image"
                android:src="@drawable/star"
                tools:srcCompat="@drawable/star" />

            <TextView
                android:id="@+id/tvStar"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/star"
                android:textAlignment="center"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    ********************************************************* third column

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewCylinder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="6dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/cylinder_image"
                android:src="@drawable/cylinder"
                tools:srcCompat="@drawable/cylinder" />

            <TextView
                android:id="@+id/tvCylinder"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/cylinder"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMoon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/moon_image"
                android:src="@drawable/moon"
                tools:srcCompat="@drawable/moon" />

            <TextView
                android:id="@+id/tvMoon"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/moon"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSquare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="6dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/square_image"
                android:src="@drawable/square"
                tools:srcCompat="@drawable/square" />

            <TextView
                android:id="@+id/tvSquare"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/square"
                android:textAlignment="center"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTriangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="6dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/triangle_image"
                android:src="@drawable/triangle"
                tools:srcCompat="@drawable/triangle" />

            <TextView
                android:id="@+id/tvTriangle"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/triangle"
                android:textAlignment="center"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</GridLayout>


</RelativeLayout>